--- a/src/main/webapp/resource/pages/content/employee/employee_dashboard.html
+++ b/src/main/webapp/resource/pages/content/employee/employee_dashboard.html
@@ -387,7 +387,7 @@ ont-family: inherit;
           <div class="col-md-2"></div>
           <div class="col-md-8">
             <div class="search-input" style="padding-top: 12px;">
-              <input type="file" file-model = "myFile" accept=".docx, .pdf" placeholder="Upload a Resume" name="resume" required />
+              <input type="file" file-model = "myFile" accept=".doc, .docx, .pdf" placeholder="Upload a Resume" name="resume" required />
             </div>
           </div>
           <div class="col-md-1" style="padding-top: 12px;">
